--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Daily Selenium Test
 on:
   schedule:
     # Runs at 7 AM UTC every day (convert to your local time if needed)
-    - cron: '0 7 * * *'
+    - cron: '13 * * *'
 
 jobs:
   run-selenium-script:
